# devansh

./: .gitignore  CREDITS.md  CVPR_paper.txt  README.md
ScatterCamo/: .gitignore  LICENSE  README.md  UNDERSTAND_ME.md  USAGE.md  compare.py  pyproject.toml  requirements.txt  run_attack.py
ScatterCamo/configs/: dev.yaml  full.yaml  single.yaml
ScatterCamo/docs/: design.md  method.md
ScatterCamo/docs/superpowers/specs/: 2026-06-04-perceptual-placement-design.md
ScatterCamo/scattercamo/: __init__.py
ScatterCamo/scattercamo/analysis/: __init__.py  plots.py
ScatterCamo/scattercamo/attack/: __init__.py  scattercamo.py
ScatterCamo/scattercamo/baselines/: __init__.py  camopatch.py  samoo.py  sparse_rs.py
ScatterCamo/scattercamo/losses/: __init__.py  margin.py
ScatterCamo/scattercamo/metrics/: __init__.py  fid.py  metrics.py
ScatterCamo/scattercamo/models/: __init__.py  imagenet.py  mock.py
ScatterCamo/scattercamo/operators/: __init__.py  genetic.py
ScatterCamo/scattercamo/perception/: __init__.py  masking.py
ScatterCamo/scattercamo/representation/: __init__.py  shapes.py
ScatterCamo/scattercamo/runner/: __init__.py  result.py  runner.py
ScatterCamo/scattercamo/search/: __init__.py  solution.py
ScatterCamo/tests/: mockmodel.py  test_analysis.py  test_baselines.py  test_compare.py  test_config.py  test_metrics.py  test_perception.py  test_runner.py  test_smoke.py
